--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -50,7 +50,7 @@
             <a class="nav-link" href="{{ '/publications/' | relative_url }}">Publications</a>
           </li>
           <li class="nav-item {% if page.url contains '/blog' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/blog/' | relative_url }}">Blog</a>
+            <a class="nav-link" href="{{ '/blog/' | relative_url }}">Hrishi tries to Write!</a>
           </li>
 
           {% if site.search_enabled %}
